# Penrose

./: .gitignore  AGENTS.md  CMakeLists.txt  FRAME_CAPTURE.md  README.md  REPORT.md  ppm_to_video.py  requirements.txt
docs/: ARCHITECTURE.md  PROJECT_DOCUMENTATION.md  Penrose_plan.md  RUNNING.md  VISUALIZATION_GUIDE.md
docs/architecture/: architecture_refactor.md  consolidated-architecture-reference.md  deep-architectural-review.md  dynamics-refinement-blueprint.md  penrose-architecture-pipeline.md  penrose-architecture-specification.md  penrose-implementation-blueprint.md  penrose_plan.md  post_refactor_review.md  realtime_modularization_plan.md  refactor_summary.md  refactored_architecture_summary.md
docs/frame_capture/: FRAME_CAPTURE.md  PPM_TO_VIDEO_README.md  VISUALIZATION_GUIDE.md
docs/reports/: PROJECT_DOCUMENTATION.md  Penrose_from_First_Principles.md  REPORT.md
docs/reviews/: README.md  legacy_architecture_review.md  realtime_architecture_review.md  realtime_roadmap.md  shared_architecture_review.md
examples/direct_integration/: main.cpp
examples/interactive_viewer/: main.cpp
lightcone/: lightcone.py
notes/: NOTES.md
notes/diskbug/: NOTES.md
outputs/benchmark_data/: .gitkeep
outputs/rendered_frames/: .gitkeep
outputs/validation_figures/: .gitkeep
physics/analysis/: analyze_benchmarks.py  config.py  generate_report.py  loaders.py  output_paths.py  photon.ipynb  plot_benchmarks.py  report.py  schemas.py  style.py
physics/export/: benchmark_io.h
physics/geodesics/: DynamicsModel.h  GeodesicDynamics.h
physics/integrators/: Integrator.h  RK4Integrator.cpp  RK4Integrator.h
physics/metrics/: CoordinateChart.cpp  CoordinateChart.h  Metric.h  SchwarzschildMetric.h
physics/metrics/parameters/: SchwarzschildParameters.h
physics/results/: benchmark_metrics.json
physics/simulation/: SimulationConfig.h  SimulationPipeline.cpp  SimulationRequest.h  TerminationPolicy.cpp  TerminationPolicy.h  TrajectorySolver.cpp  TrajectorySolver.h
physics/simulation/initial_conditions/: InitialConditions.h  SchwarzschildInitialStateBuilders.cpp  SchwarzschildInitialStateBuilders.h
physics/state/: State.h
physics/validation/: BenchmarkRunner.cpp  BenchmarkRunner.h  freefall.cpp  freefall.h  main_benchmark.cpp  null_geodesic.cpp  null_geodesic.h  orbital.cpp  orbital.h
physics/validation/observables/: SchwarzschildObservables.h
realtime/: main.cpp
realtime/core/: Engine.cpp  Engine.h  Framebuffer.cpp  Framebuffer.h  Shader.h  ShaderManager.cpp  ShaderManager.h  Texture.h  Window.cpp  Window.h
realtime/gpu/glad/: glad.c  glad.h
realtime/render/: GeodesicPass.cpp  GeodesicPass.h  RenderPass.h  Renderer.cpp  Renderer.h  UpscalePass.cpp  UpscalePass.h
realtime/renderer/: AccretionDisk.h  Camera.h  Engine.cpp  Engine.h  Particle.h  ParticleBuffer.cpp  ParticleBuffer.h  RenderTarget.cpp  RenderTarget.h  Shader.h  Window.cpp  Window.h
realtime/scene/: Camera.h  ParticleBuffer.h  ParticleSystem.h
realtime/shaders/: quad.frag  quad.vert  reduced.comp  reduced.frag
realtime/shaders/common/: disk.glsl  march_reduced.glsl  noise.glsl  particle.glsl  quad_header.glsl  quad_main.glsl  reduced_header.glsl  reduced_main.glsl  scene.glsl  screen.frag  screen.vert  skybox.glsl  uniforms.glsl
realtime/shaders/metrics/: schwarzschild_full.glsl  schwarzschild_reduced.glsl
realtime/spacetime/: AccretionDisk.cpp  AccretionDisk.h  LutBaker.cpp  LutBaker.h
run/adapter/: SimulationTrajectoryAdapter.cpp  SimulationTrajectoryAdapter.h
run/benchmark/: main.cpp
run/export/: main.cpp
run/viewer/: main.cpp
shaders/: quad.frag  upscale.frag
shared/constants/: PhysicalConstants.h
shared/metrics/: SchwarzschildParameters.h
shared/observer/: Observer.h
shared/spacetime/: Metric.h  MetricKind.h
shared/state/: GeodesicState.h
shared/units/: Units.h
src/: main.cpp
src/benchmarking/: benchmark_io.h  freefall.cpp  freefall.h  main_benchmark.cpp  null_geodesic.cpp  null_geodesic.h  orbital.cpp  orbital.h  plot_orbits.py
src/dynamics/: DynamicsModel.h  GeodesicDynamics.cpp  GeodesicDynamics.h
src/integration/: RK4Integrator.h
src/physics_engine/: physics.cpp  physics.h
src/render/: Camera.h  FrameCapture.h  ParticleBuffer.h  Renderer.cpp  Renderer.h  Shader.h  Texture.cpp  Window.cpp  Window.h
src/simulation/: TerminationPolicy.h  TrajectorySolver.h
src/spacetime/: CoordinateChart.h  SchwarzschildMetric.cpp
visualization/: README.md
visualization/Apps/: BenchmarkMain.cpp  DisplayBlit.cpp  DisplayBlit.h  HeadlessExportMain.cpp  ViewerApp.cpp  ViewerApp.h  ViewerMain.cpp
visualization/Camera/: Camera.cpp  Camera.h
visualization/Geometry/: Coordinates.cpp  Coordinates.h  Math.h  Mesh.cpp  Mesh.h
visualization/IO/: CsvTrajectoryLoader.cpp  CsvTrajectoryLoader.h  OutputPaths.cpp  OutputPaths.h  PpmWriter.cpp  PpmWriter.h  StarfieldBackground.cpp  StarfieldBackground.h
visualization/Preparation/: StoredTrajectory.h  VisualizationPreparation.cpp  VisualizationPreparation.h  VisualizationPreparationSettings.h
visualization/Presentation/: PostProcessor.cpp  PostProcessor.h  PresentationDefaults.cpp  PresentationDefaults.h  PresentationPipeline.cpp  PresentationPipeline.h  PresentationProfile.cpp  PresentationProfile.h  VisualizationConfig.cpp  VisualizationConfig.h
visualization/Renderer/: CPURasterizer.cpp  CPURasterizer.h  CpuRasterizerBackend.cpp  CpuRasterizerBackend.h  Framebuffer.cpp  Framebuffer.h  HorizonProjection.h  StarfieldGenerator.h  TrajectoryRenderBackend.h
visualization/Scene/: Scene.cpp  Scene.h  SceneBuilder.cpp  SceneBuilder.h
visualization/Tests/: TestCamera.cpp  TestCoordinates.cpp  TestCsv.cpp  TestDeclarations.h  TestHarness.h  TestMain.cpp  TestRenderer.cpp  TestTrajectory.cpp
visualization/Trajectory/: Trajectory.cpp  Trajectory.h  TrajectoryAdapter.cpp  TrajectoryAdapter.h
visualization/scientific/: __init__.py  analyze_benchmarks.py  config.py  generate_report.py  loaders.py  log_parser.py  metrics.py  output_paths.py  plot_benchmarks.py  plots.py  report.py  schemas.py  style.py
(+9 files in other folders)
